@@ -26,6 +26,7 @@ GA4J 是使用 Java 开发的遗传算法框架。用户使用框架时，只需
 ### 交叉算子
 
 * 单点交叉
+* 双点交叉
 
 ### 变异算子
 
@@ -33,13 +34,18 @@ GA4J 是使用 Java 开发的遗传算法框架。用户使用框架时，只需
 
 ## 计划实现的功能
 
-* 双点交叉
+- [x] 双点交叉
+- [x] 多线程支持
 
 ## 开发环境
 
 * Java 8
 * Eclipse 2020-06 (4.16.0)
 * Maven 3.6.3
+
+## 依赖
+
+依赖 [JUnit 5](https://junit.org/junit5)，见 POM 文件。
 
 ## 更新记录
 
